--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>See posts:</h1>
 <ul>
 <% @posts.each do |post| %>
-	<li><%= link_to post.emoji, post_path(post.id) %></li>
+	<li><%= link_to post.body, post_path(post.id) %> <%= post.emoji %></li>
 <% end %>
 </ul>
