--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,11 @@
 <h1>See posts:</h1>
 <ul>
 <% @posts.each do |post| %>
-	<li><%= link_to post.body, post_path(post.id) %> <%= post.emoji %></li>
+	<li>
+	  <%= link_to post.body, post_path(post.id) %> <%= post.emoji %> <br> 
+	  <% if post.image.file? %>
+	    <%= image_tag post.image.url(:thumb) %>
+	  <% end %>
+	</li>
 <% end %>
 </ul>
