--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Make a post!</h1>
+<h2>Post an emoji and/or image, add some text if you want!</h2>
 <%= render 'shared/errors' %>
 <%= render 'form' %>
