--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,9 @@
-<h1>Posts</h1>
-	<strong><%= @post.body %></strong>
-	<%= @post.emoji %>
-	<%= image_tag @post.image.url(:medium) %>
+<h1>👀 specific post</h1>
+		<%= @post.created_at.in_time_zone('Eastern Time (US & Canada)').strftime('%B %e, %Y, %I:%M %P')%> <br>
+	  <strong><%= @post.body %></strong>
+	  <%= @post.emoji %> <br> 
+	  <% if @post.image.file? %>
+	    <%= image_tag @post.image.url(:medium) %>
+	  <% end %><br>
+
 
