--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,15 @@
        <li><%= link_to 'Home', root_path %></li>
         <% if current_user %>
         	<li><%= link_to current_user.username, user_path(current_user.id) %></li>
-         	<li><%= link_to 'New Post', new_post_path %></li>
+         	<li><%= link_to 'Make New Post', new_post_path %></li>
          	<li><%= link_to 'Log Out', logout_path%></li>
          <% else %>
            <li><%= link_to "Create Account", new_user_path %></li>
            <li><%= link_to 'Log In', login_path %></li>
          <% end %>
       </ul>
+        <strong>Search for users</strong>
+        <%= react_component 'SearchBar' %>
     </nav>
     <%= yield %>
   </body>
