--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,14 @@
   <body>
     <nav>
     <ul id="top-nav">
-       <li ><%= link_to 'Home', root_path %></li>
+       <li id="nav-link-color"><%= link_to 'Home', root_path %></li>
         <% if current_user %>
-        	<li><%= link_to current_user.username, user_path(current_user.id) %></li>
-         	<li><%= link_to 'Make New Post', new_post_path %></li>
-         	<li><%= link_to 'Log Out', logout_path%></li>
+        	<li id="nav-link-color"><%= link_to current_user.username, user_path(current_user.id) %></li>
+         	<li id="nav-link-color"><%= link_to 'Make New Post', new_post_path %></li>
+         	<li id="nav-link-color"><%= link_to 'Log Out', logout_path%></li>
          <% else %>
-           <li><%= link_to "Create Account", new_user_path %></li>
-           <li><%= link_to 'Log In', login_path %></li>
+           <li id="nav-link-color"><%= link_to "Create Account", new_user_path %></li>
+           <li id="nav-link-color"><%= link_to 'Log In', login_path %></li>
          <% end %>
       </ul>
         <%= react_component 'SearchBar' %>
