--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -3,7 +3,7 @@ body {
 }
 
 input[type=submit] {
-  float: right;
+  float: left;
   padding: 8px 15px;
   background: #ccc;
   border: 0 none;
@@ -62,7 +62,7 @@ li {
   border: double;
   padding: 4px;
   border-spacing: 10px;
-  margin: 0 0 5px 0;;
+  margin: 0 0 10px 0;;
 }
 
 
